fix(site:Store): Button spacing

--- a/web/src/components/button/snipcart-button.module.css
+++ b/web/src/components/button/snipcart-button.module.css
@@ -7,6 +7,7 @@
   color: var(--color-black);
   border: 2px solid black;
   padding: 0.425em 0.425rem;
+  margin-top: 1rem;
   text-decoration: none;
   margin: 0 0;
   text-transform: uppercase;
